.opsera-healthcp-0209/k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: healthcp-0209
  labels:
    app: healthcp-0209
spec:
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app: healthcp-0209
